# listele

./: .gitignore  README.md  listele.py  pyproject.toml
listele/: listele.py
